TODO
* get %SystemRoot% from:
  SOFTWARE\Microsoft\Windows NT\CurrentVersion\

* XML output change
  - Keywords add 0x no leading 0's

* API
  - add functions for user security identifier function: system/security#userid
  - get op code (0 => Info)
  - task category (none if not set)
  - keywords

* export_handle_get_message_file_path
  return 0 if no corresponding file has been found
* recovery:
  - pass what type of chunk is being read
  - pass flag to binary xml parsing to ignore parsing errors ?
    or make this the default behavior
  - move read xml out of init record function ?
* fix message filename retrieval, registry bering read wrong ?
* implement libevtx_xml_tag_get_attribute_by_utf8_path (and utf16 equivalent) ?
* implement libevtx_xml_tag_get_element_by_utf8_path (and utf16 equivalent) ?
* store name hash in value identifier
* deal with corruption scenario
* deal with trailing empty data ?
* remove libevtx_libfguid.h once libfvalue wraps the format flags
* evtxeport:
  - rewrite using evtexport
  - export format: xml
  - non-xml export format use evtexport like approach (add functions to get
    specific event data)
* add recovery scan
* add debug function for binary XML token types
* codepage support
* flag internally if the file is corrupted (CRC mismatch)

Recovery:
* scan for records in chunk free space

20120819
* applied updates

20120817
* worked on python bindings
  - added iterator

20120816
* worked on python bindings

20120815
* worked on library

20120814
* worked on python bindings
* worked on tools

20120805
* applied updates

20120718
* applied updates
* added libcstring, libfwevt
* worked on libfwevt integration into libevtx
* added support for empty element tag value

20120501
* applied updates
* worked on text format export

20120430
* worked on record recovery
* worked on text format export

20120429
* worked on split value support
* worked on character and entity reference support

20120428
* updated dependencies