@@ -3,6 +3,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/common \
 	@LIBCSTRING_CPPFLAGS@ \
 	@LIBCERROR_CPPFLAGS@ \
+	@LIBCDATA_CPPFLAGS@ \
 	@LIBCLOCALE_CPPFLAGS@ \
 	@LIBCNOTIFY_CPPFLAGS@ \
 	@LIBCSPLIT_CPPFLAGS@ \
@@ -21,7 +22,6 @@ AM_CPPFLAGS = \
 	@LIBWRC_CPPFLAGS@ \
 	@LIBCDIRECTORY_CPPFLAGS@ \
 	@LIBCSYSTEM_CPPFLAGS@ \
-	@MEMWATCH_CPPFLAGS@ \
 	@LIBEVTX_DLL_IMPORT@
 
 AM_LDFLAGS = @STATIC_LDFLAGS@
@@ -65,14 +65,13 @@ evtxexport_LDADD  = \
 	@LIBFDATETIME_LIBADD@ \
 	@LIBCPATH_LIBADD@ \
 	@LIBCDIRECTORY_LIBADD@ \
-	../libevtx/libevtx.la \
 	@LIBCSPLIT_LIBADD@ \
+	../libevtx/libevtx.la \
 	@LIBCNOTIFY_LIBADD@ \
 	@LIBCLOCALE_LIBADD@ \
 	@LIBCERROR_LIBADD@ \
 	@LIBCSTRING_LIBADD@ \
-	@LIBINTL@ \
-	@MEMWATCH_LIBADD@
+	@LIBINTL@
 
 evtxinfo_SOURCES = \
 	evtxinfo.c \
@@ -96,8 +95,7 @@ evtxinfo_LDADD  = \
 	@LIBCLOCALE_LIBADD@ \
 	@LIBCERROR_LIBADD@ \
 	@LIBCSTRING_LIBADD@ \
-	@LIBINTL@ \
-	@MEMWATCH_LIBADD@
+	@LIBINTL@
 
 MAINTAINERCLEANFILES = \
 	Makefile.in
